--- a/tests/all.html
+++ b/tests/all.html
@@ -6,7 +6,7 @@
     @import url(../src/structure.css);
     @import url(../src/standard.skin.css);
     @import url(../src/extended.skin.css);
-    @import url(../src/debug.skin.css);
+    // @import url(../src/debug.skin.css);
   </style>
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="viewport" content="initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
