Added skin for iOS7
Finally, a simple iOS7 skin.

--- a/tests/all.html
+++ b/tests/all.html
@@ -4,7 +4,7 @@
   <style>
     @import url(../src/reset.less);
     @import url(../src/structure.less);
-    @import url(../src/standard.skin.less);
+    @import url(../src/ios7.skin.less);
     @import url(../src/extended.skin.less);
     // @import url(../src/debug.skin.less);
   </style>
